--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/mockjs": "^1.0.6",
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
-    "eslint": "8.12.0",
+    "eslint": "^8.12.0",
     "eslint-config-next": "12.1.1",
+    "mockjs": "^1.1.0",
+    "stylelint": "^14.6.1",
+    "stylelint-config-standard-scss": "^3.0.0",
     "typescript": "4.6.3"
   }
 }
